<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.foodmandu.fragment.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_favourites"
        android:name="com.example.foodmandu.ui.Favourates.FavouratesFragment"
        android:label="@string/menu_favourites"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_basket"
        android:name="com.example.foodmandu.ui.History.HistoryhowFragment"
        android:label="@string/menu_basket"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_history"
        android:name="com.example.foodmandu.ui.More.MoreFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_notifications"
        android:name="com.example.foodmandu.ui.Notification.NotificationFragment"
        android:label="@string/menu_notification"
        tools:layout="@layout/activity_login" />

    <fragment
        android:id="@+id/nav_more"
        android:name="com.example.foodmandu.ui.baskets.BasketFragment"
        android:label="@string/menu_more"
        tools:layout="@layout/activity_login" />
</navigation>